[package]
name = "back"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"


[dependencies]
axum = { version = "0.7.3", features = ["multipart", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
serde = { version = "*", features = ["derive"] }
dotenv = "*"
tower = "*"
chrono = { version = "*", features = ["serde"] }
tower-http = { version = "*", features = ["cors", "validate-request"] }
serde_json = "*"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
anyhow = "*"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
debug = true
